add .py for submission

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -165,27 +165,15 @@
     "### Question 3"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_55836/2307876700.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df['Reviews'] = df['Reviews'].str.replace('3.0M', '3000000')\n"
-     ]
-    }
-   ],
+   "execution_count": 21,
+   "outputs": [],
    "source": [
-    "df['Reviews'] = df['Reviews'].str.replace('3.0M', '3000000')"
+    "df['Reviews'] = df['Reviews'].replace('3.0M', '3000000')"
    ],
    "metadata": {
     "collapsed": false,
@@ -196,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "df['Reviews'] = df['Reviews'].astype(dtype='float64')"
@@ -460,33 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['Facebook', 'WhatsApp Messenger', 'Instagram',\n       'Messenger – Text and Video Chat for Free', 'Clash of Clans'],\n      dtype=object)"
+      "text/plain": "   index                                       App\n0   2544                                  Facebook\n1    336                        WhatsApp Messenger\n2   2545                                 Instagram\n3    335  Messenger – Text and Video Chat for Free\n4   1670                            Clash of Clans",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>index</th>\n      <th>App</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2544</td>\n      <td>Facebook</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>336</td>\n      <td>WhatsApp Messenger</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2545</td>\n      <td>Instagram</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>335</td>\n      <td>Messenger – Text and Video Chat for Free</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1670</td>\n      <td>Clash of Clans</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.drop_duplicates(subset=['App']).nlargest(5, 'Reviews')['App'].unique()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "df.to_csv(path_or_buf='data/v1.0-googleplaystore.csv', index=False)"
+    "df.drop_duplicates(subset=['App']).nlargest(5, 'Reviews')['App'].reset_index()"
    ],
    "metadata": {
     "collapsed": false,
